tests/e2e/authz-server/policy-ordering/policy-b.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/kyverno-envoy-plugin/main/.schemas/json/authorizationpolicy-envoy-v1alpha1.json
apiVersion: envoy.kyverno.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: policy-b
spec:
  authorizations:
  - expression: >
      envoy
        .Denied(403)
        .WithBody("From Policy B")
        .Response()
